--- a/flow/src/main/resources/mainnet_genesis.conf
+++ b/flow/src/main/resources/mainnet_genesis.conf
@@ -1,6 +1,11 @@
 oxygenium.genesis.allocations = [
   {
-    address = "15bUBr6BJGNVdEn3HtFLaaGGEdvwwxGEsGy4P9GES196X",
+    address = "18vjw7mZkewYftGEAd1xYdikwT9pQQBZJ9X6iVZcP7RMH",
+    amount = "20000 OXYG",
+    lock-duration = 0 days
+  },
+    {
+    address = "189M4vLkLtsSDyD2SweCpi38wvnMCPEJ8wMAp1abax8uh",
     amount = "20000 OXYG",
     lock-duration = 0 days
   }
